--- a/[mini-message-board]/views/index.pug
+++ b/[mini-message-board]/views/index.pug
@@ -3,3 +3,9 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
+
+  ul
+  each message in messages
+    li #{message.user}: #{message.text} - #{message.added.toLocaleString()}
+
+
