Adjusts names to match index.js

--- a/[mini-message-board]/views/form.pug
+++ b/[mini-message-board]/views/form.pug
@@ -1,6 +1,6 @@
 form(method="POST" action="/new")
-  label(for="user") User:
-  input(type="text" name="user")
-  label(for="text") Message:
-  input(type="text" name="text")
+  label(for="messageUser") User:
+  input(type="text" name="messageUser")
+  label(for="messageText") Message:
+  input(type="text" name="messageText")
   input(type="submit" value="Submit")
